tests/transpiler/x/zig/if_then_else_nested.zig
// Generated by Mochi Zig transpiler on 2025-07-20 03:39 +0000
const std = @import("std");

pub fn main() void {
    const x = 8;
    const msg = if (x > 10) "big" else if (x > 5) "medium" else "small";
    std.debug.print("{any}\n", .{msg});
}
